[package]
name = "carla-bin"
version = "0.3.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "Prepare and build Carla simulator source code."
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jerry73204/carla-rust"
repository = "https://github.com/jerry73204/carla-rust"
documentation = "https://docs.rs/carla-bin/"

[build-dependencies]
carla-src = { version = "0.4.0", path = "../carla-src" }
cfg-if = "1.0.0"
json5 = "0.4.1"
serde = { version = "1.0.163", features = ["derive"] }

[dependencies]
anyhow = "1.0.71"
once_cell = "1.17.1"
carla-src = { version = "0.4.0", path = "../carla-src" }
ureq = "2.6.2"
tar = "0.4.38"
xz = "0.1.0"
json5 = "0.4.1"
serde = { version = "1.0.163", features = ["derive"] }

[features]
force-rebuild = []
generate-prebuild = []
