[package]
name = "carla-bin"
version = "0.3.2"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "Prepare and build Carla simulator source code."
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jerry73204/carla-rust"
repository = "https://github.com/jerry73204/carla-rust"
documentation = "https://docs.rs/carla-bin/"

[build-dependencies]
carla-src = { version = "0.4.1", path = "../carla-src" }
cfg-if = "1.0.0"
json5 = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }

[dependencies]
anyhow = "1.0.75"
once_cell = "1.18.0"
carla-src = { version = "0.4.1", path = "../carla-src" }
ureq = "2.7.1"
tar = "0.4.40"
xz = "0.1.0"
json5 = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
fs_extra = "1.2.0" 

[features]
generate-prebuild = []
