[package]
name = "carla-codegen"
version = "0.1.0"
edition = "2021"
authors = ["CARLA Rust Contributors"]
description = "Code generator for CARLA Python API to Rust type conversion"
license = "MIT"
repository = "https://github.com/carla-simulator/carla-rust"

[[bin]]
name = "carla-codegen"
path = "src/bin/cli.rs"

[dependencies]
# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Configuration
toml = "0.8"


# Code generation with syn
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
prettyplease = { version = "0.2" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
indexmap = "2.0"
derive_more = { version = "1.0", features = ["display", "from"] }
once_cell = "1.19"

# Path handling
walkdir = "2.0"

# String manipulation
convert_case = "0.6"

# CLI
clap = { version = "4.0", features = ["derive"] }


[dev-dependencies]
# Testing
insta = { version = "1.0", features = ["yaml"] }
pretty_assertions = "1.0"
tempfile = "3.0"
serde_json = "1.0"
