[package]
name = "carla-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
carla = { version = "0.3.1", path = "../carla" }
clap = { version = "4.0.29", features = ["derive"] }
nalgebra = { version = "0.31.4", features = ["serde-serialize"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
