[package]
name = "carla-src"
version = "0.11.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "A utility crate that prepares CARLA simulator source code"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jerry73204/carla-rust"
repository = "https://github.com/jerry73204/carla-rust"
documentation = "https://docs.rs/carla-src/"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
tempfile = "3.0"