[package]
name = "carla-sys"
version = "0.12.0"
edition = "2021"
description = "CXX-based FFI bindings for CARLA simulator"
license = "MIT"

[dependencies]
cxx = "1.0"
anyhow = "1.0"
thiserror = "1.0"
bitflags = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cxx-build = "1.0"
anyhow = "1.0"
cc = "1.0"
carla-src = { path = "../carla-src" }
cmake = "0.1"

[features]
default = []

[[example]]
name = "basic_client"

[[example]]
name = "core_infrastructure"

[[example]]
name = "weather_demo"

[[example]]
name = "recording_demo"



