[package]
name = "carla-sys"
version = "0.14.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "FFI bindings for Carla simulator"
edition = "2024"
links = "carla"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jerry73204/carla-rust"
repository = "https://github.com/jerry73204/carla-rust"
documentation = "https://docs.rs/carla-sys/"
keywords = ["carla", "simulator", "ffi", "bindings"]
categories = ["api-bindings", "external-ffi-bindings"]
exclude = ["generated/*.tar.zstd"]

[dependencies]
autocxx = { version = "0.28.0" }
cxx = "1.0.119"

[build-dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
autocxx-build = { version = "0.28.0" }
carla-src = { version = "0.12.1", path = "../carla-src" }
json5 = "1.3"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
tar = "0.4.40"
ureq = "3.2"
zstd = { version = "0.13.0", features = ["zstdmt"] }

[features]
docs-only = []
build-prebuilt = ["save-bindings"]
save-bindings = []

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]
