[package]
name = "carla-test-codegen"
version = "0.1.0"
edition = "2021"
description = "Test crate for CARLA code generation"
license = "MIT"

# Exclude from parent workspace
[workspace]

[dependencies]
# Required dependencies for generated code
thiserror = "1.0"

# Optional dependencies that generated code might use
anyhow = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
nalgebra = { version = "0.32", optional = true }

[features]
default = []
full = ["anyhow", "serde", "serde_json", "nalgebra"]

[lib]
name = "carla_test_codegen"
path = "src/lib.rs"