[package]
name = "carla-test-server"
version = "0.1.0"
edition = "2021"
description = "Test infrastructure for CARLA Rust client with automatic server management"

[dependencies]
carla-test-server-macros = { path = "../carla-test-server-macros" }
carla = { path = "../carla" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
