[package]
name = "carla"
version = "0.13.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "High-level Rust client library for CARLA simulator 0.10.0 - mirrors C++ API"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jerry73204/carla-rust"
repository = "https://github.com/jerry73204/carla-rust"
documentation = "https://docs.rs/carla/"

[dependencies]
# Core FFI layer
carla-sys = { version = "0.12.0", path = "../carla-sys" }

# Error handling
anyhow = "1.0.80"
thiserror = "1.0.57"

# Math and data structures
nalgebra = "0.32.4"
ndarray = "0.15.6"

# Utilities
once_cell = "1.19.0"
itertools = "0.12.1"
derivative = "2.2.0"
static_assertions = "1.1.0"
bitflags = "2.4.2"

# Async support (for sensor callbacks)
tokio = { version = "1.35.1", features = ["sync", "rt"] }

[dev-dependencies]
approx = "0.5"
serial_test = "3.0"

[features]
default = []
# Enable async sensor processing
async = ["tokio/rt-multi-thread"]
# Enable tests that require CARLA server running
test-carla-server = []

[[example]]
name = "actor_list_usage"
required-features = []

[[example]]
name = "actor_list_chaining"
required-features = []
