[package]
name = "carla"
version = "0.13.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "High-level Rust client library for CARLA simulator 0.10.0 - mirrors C++ API"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jerry73204/carla-rust"
repository = "https://github.com/jerry73204/carla-rust"
documentation = "https://docs.rs/carla/"

[dependencies]
# Core FFI layer
carla-sys = { version = "0.12.0", path = "../carla-sys" }

# Error handling
anyhow = "1.0.80"
thiserror = "1.0.57"

# Math and data structures
nalgebra = "0.32.4"
ndarray = "0.15.6"

# Utilities
once_cell = "1.19.0"
itertools = "0.12.1"
derivative = "2.2.0"
static_assertions = "1.1.0"
bitflags = "2.4.2"

# TODO: Re-enable async support in the future
# Async support (for sensor callbacks)
# tokio = { version = "1.35.1", features = ["sync", "rt"] }

[dev-dependencies]
approx = "0.5"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
# Example-specific dependencies
csv = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = "0.24"
log = "0.4"
chrono = "0.4"

[features]
default = []
# TODO: Re-enable async feature in the future
# Enable async sensor processing
# async = ["tokio/rt-multi-thread"]

[[example]]
name = "actor_list_usage"
required-features = []

[[example]]
name = "actor_list_chaining"
required-features = []

# Basics examples
[[example]]
name = "01_connection"
path = "examples/basics/01_connection.rs"

[[example]]
name = "02_world_info"
path = "examples/basics/02_world_info.rs"

[[example]]
name = "03_blueprints"
path = "examples/basics/03_blueprints.rs"

# Actors examples
[[example]]
name = "01_spawn_vehicle"
path = "examples/actors/01_spawn_vehicle.rs"

[[example]]
name = "vehicle_showcase"
path = "examples/actors/vehicle_showcase.rs"

[[example]]
name = "vehicle_lighting"
path = "examples/actors/vehicle_lighting.rs"

# Traffic examples
[[example]]
name = "generate_traffic"
path = "examples/traffic/generate_traffic.rs"

# Sensors examples
[[example]]
name = "sensor_sync"
path = "examples/sensors/sensor_sync.rs"

# Road examples
[[example]]
name = "road_network_explorer"
path = "examples/road/road_network_explorer.rs"

# Actors examples (CARLA 0.10.0 features)
[[example]]
name = "vehicle_doors"
path = "examples/actors/vehicle_doors.rs"

# Camera examples
[[example]]
name = "camera_paths"
path = "examples/cameras/camera_paths.rs"

# Recording examples
[[example]]
name = "recording_playback"
path = "examples/recording/recording_playback.rs"

# AI examples
[[example]]
name = "ai_traffic_integration"
path = "examples/ai/ai_traffic_integration.rs"
