[package]
name = "carla"
version = "0.12.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
description = "Rust client library for Carla simulator"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jerry73204/carla-rust"
repository = "https://github.com/jerry73204/carla-rust"
documentation = "https://docs.rs/carla/"

[dependencies]
autocxx = "0.26.0"
cxx = "1.0.119"
nalgebra = "0.32.4"
carla-sys = { version = "0.12.0", path = "../carla-sys" }
ndarray = "0.15.6"
once_cell = "1.19.0"
anyhow = "1.0.80"
itertools = "0.12.1"
derivative = "2.2.0"
static_assertions = "1.1.0"
image = "0.24"
rand = "0.8"

[build-dependencies]
anyhow = "1.0.80"

[dev-dependencies]
approx = "0.5"
# Dependencies for manual_control example
macroquad = "0.4"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
docs-only = ["carla-sys/docs-only"]
build-prebuilt = ["carla-sys/build-prebuilt"]

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]
